Home page files 1

--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -213,6 +213,8 @@ Cambridge, USA, 2010.
 \item ``What Is Neural Machine Translation Learning?'' Conference on Technologies and Applications of Artificial Intelligence (TAAI), 2017.
 
 \item ``The Moment When the Future Fell Asleep,'' Conference of the North American Association for Computational Linguistics (NAACL), 2018.
+
+\item ``Deciphering Historical Manuscripts,'' International Conference on the Frontiers of Handwriting Recognition (ICFHR), 2018.
 \end{itemize}
 
 %\vspace{0.25in}
