Home page files 1

--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -41,14 +41,14 @@ Marina del Rey, CA 90292 \\
 \hd{Current}
 
 \begin{itemize}
-\item Dean's Professor of Computer Science (2014-on-leave), 
+\item Chief Scientist for Natural Language Processing (2018-), Didi Chuxing.
+
+\item Dean's Professor of Computer Science (2014-), 
 Research Professor (2011-2014), 
 Research Associate Professor (2002-2010),
 Research Assistant Professor (1993-2002), 
 Computer Science Department, 
 University of Southern California.  
-
-\item Chief Scientist for Natural Language Processing (2018-), Didi Chuxing.
 
 \item Chief Scientist (2017-), Specifio.
 
@@ -124,97 +124,31 @@ Johns Hopkins University, funded by NSF and DoD), Summer 1999.
 \hd{Invited talks} 
 
 \begin{itemize}
-\item ``Statistical Machine Translation: Where it Went,'' 
-Conference on Empirical Methods in Natural Language Processing (EMNLP), 
-1997.
-
-\item ``Every Time I Fire a Statistician, I Get a Warm
-Fuzzy Feeling,'' Conference of the Association for Machine 
-Translation in the Americas (AMTA), Cuernavaca, Mexico, 2000.
-
-\item ``Deeper Representations for Machine Translation: 
-Ready or Not?,'' 
-Conference on Empirical Methods in Natural Language Processing 
-(EMNLP), 2003.
-
-\item ``What's New in Statistical Machine Translation,''
-Conference on Uncertainty in AI (UAI), Acapulco, Mexico, 2003.
-
-\item ``What's New in Statistical Machine Translation,''
-International Joint Conference on AI (IJCAI), Edinburgh, Scotland, 2005.
-
-%\item ``Tree Transducers for Natural Language 
-%Processing,'' European Workshop on Natural Language Generation, Aberdeen,
-%Scotland, 2005.
-
-\item ``Results on Decipherment Problems,''
-ESSLLI, Heriot-Watt, Scotland, 2005.
-
-%\item ``I Shouldn't Have Slept Through That One Class When I Was a 
-%Grad Student at CMU,''
-%Carnegie Mellon Computer Science Anniversary, Pittsburgh, 2006.
-
-\item ``Isn't Linguistic Structure Important, Asked the Engineer?'' 
-Conference of the European Association for Computational Linguistics (EACL), 
-Trento, 2006.
-
-\item ``Can a Machine Translate Without Knowing What a Verb Is?'' 
-Conference of the North American Association for 
-Computational Linguistics, Workshop on Statistical Machine Translation (WMT),
-New York City, 2006.
-
-\item ``No More Strings, Please,''
-IEEE/ACL Spoken Language Technology Workshop, Aruba, 2006.
-
-\item ``Capturing Practical Natural Language
-Transformations,'' Mathematics of Language Conference (MOL), Los Angeles, 2007.
-
-\item ``Automated Language Translation Needs Generation Help Badly,'' 
-International Conference on Natural Language Generation (NLG), Prague, 2007.
-
-\item ``Weighted Transducers for Natural Language Processing,''
-Weighted Automata: Theory and Applications (WATA), Dresden, 2008.
-
-\item ``Morphology in Statistical Machine Translation: Integrate-in,
-or Tack-on?'' NAACL Workshop on Syntax and Parsing of Morphologically
-Rich Languages (SPMRL), Los Angeles, 2010.
-
-\item ``Theory and Practice of Translation,'' ACL Workshop on
-Applications of Tree Automata in Natural Language Processing, Stockholm,
-2010.
-
-\item ``What's on the Horizon?  The Research Agenda,'' Translation
-Automation Users Society (TAUS) User Conference, Portland, 2010.
-
-\item ``Why do We Call it Decoding?'' 
-Conference on Empirical Methods in Natural Language Processing (EMNLP), 
-Cambridge, USA, 2010.
-
-%\item ``Deciphering Natural Language,'' Uppsala University, Sweden, 2011.
-
-%\item ``Language Translation and Code-Breaking,'' University of Pennsylvania, Carnegie Mellon (2011).  UvA, CUNY (2012).
-
-\item ``Human Language Technology,'' NITRD 20th Anniversary, 2012.
-
-\item ``Transformation Frameworks for Machine Translation: Strings, Trees, and Graphs,''  Eleventh International Workshop on Tree Adjoining Grammars and Related Formalisms (TAG+11), 2012; Weighted Automata: Theory and Applications (WATA), 2012.
-
-\item ``Human Language Technology,'' AAAS conference (Boston, MA), 2013.
-
-%\item ``The Voynich Manuscript,'' (with Sravana Reddy), Stanford University, 2013.
-
-\item ``Structures for Machine Translation: Strings, Trees, and Graphs,'' International Workshop on Computational Semantics (IWCS), Potsdam, 2013.
-
-%\item ``Language Translation and Code-Breaking,'' Brown University Distinguished Lecture; Brandeis University; Suzhou University; University of Trento, LXMLS Summer School; Simon Fraser University; Stanford University; all 2013-14.
-
-\item ``The DARPA Big Mechanisms Project,'' Assocation for Computational Linguistics, BioNLP Workshop (ACL-BioNLP), 2015.
-
-\item ``What Is Neural Machine Translation Learning?'' Association for Computational Linguistics, Workshop on Neural Machine Translation (ACL-NMT), 2017.
-
-\item ``What Is Neural Machine Translation Learning?'' Conference on Technologies and Applications of Artificial Intelligence (TAAI), 2017.
-
-\item ``The Moment When the Future Fell Asleep,'' Conference of the North American Association for Computational Linguistics (NAACL), 2018.
-
 \item ``Deciphering Historical Manuscripts,'' International Conference on the Frontiers of Handwriting Recognition (ICFHR), 2018.
+\item ``The Moment When the Future Fell Asleep,'' Conference of the North American Association for Computational Linguistics (NAACL), 2018.
+\item ``What Is Neural Machine Translation Learning?'' Conference on Technologies and Applications of Artificial Intelligence (TAAI), 2017.
+\item ``What Is Neural Machine Translation Learning?'' Association for Computational Linguistics, Workshop on Neural Machine Translation (ACL-NMT), 2017.
+\item ``Structures for Machine Translation: Strings, Trees, and Graphs,'' International Workshop on Computational Semantics (IWCS), Potsdam, 2013.
+\item ``The Voynich Manuscript,'' (with Sravana Reddy), Stanford University, 2013.
+\item ``Human Language Technology,'' AAAS conference (Boston, MA), 2013.
+\item ``Transformation Frameworks for Machine Translation: Strings, Trees, and Graphs,'' Eleventh International Workshop on Tree Adjoining Grammars and Related Formalisms (TAG+11), 2012; Weighted Automata: Theory and Applications (WATA), 2012.
+\item ``Human Language Technology,'' NITRD 20th Anniversary, 2012.
+\item ``Why Do We Call it Decoding?'' Conference on Empirical Methods in Natural Language Processing (EMNLP), Cambridge, USA, 2010.
+\item ``What's on the Horizon?  The Research Agenda,'' Translation Automation Users Society (TAUS) User Conference, Portland, 2010.
+\item ``Morphology in Statistical Machine Translation: Integrate-in, or Tack-on?'' NAACL Workshop on Syntax and Parsing of Morphologically Rich Languages (SPMRL), Los Angeles, 2010.
+\item ``Theory and Practice of Translation,'' ACL Workshop on Applications of Tree Automata in Natural Language Processing, Stockholm, 2010.
+\item ``Weighted Transducers for Natural Language Processing,'' Weighted Automata: Theory and Applications (WATA), Dresden, 2008.
+\item ``Automated Language Translation Needs Generation Help Badly,'' International Conference on Natural Language Generation (NLG), Prague, 2007.
+\item ``Capturing Practical Natural Language Transformations,'' Mathematics of Language Conference (MOL), Los Angeles, 2007.
+\item ``No More Strings, Please,'' IEEE/ACL Spoken Language Technology Workshop, Aruba, 2006.
+\item ``Can a Machine Translate Without Knowing What a Verb Is?'' Conference of the North American Association for Computational Linguistics, Workshop on Statistical Machine Translation (WMT), New York City, 2006.
+\item ``Isn't Linguistic Structure Important, Asked the Engineer?'' Conference of the European Association for Computational Linguistics (EACL), Trento, 2006.
+\item ``Results on Decipherment Problems,'' ESSLLI, Heriot-Watt, Scotland, 2005.
+\item ``What's New in Statistical Machine Translation,'' International Joint Conference on AI (IJCAI), Edinburgh, Scotland, 2005.
+\item ``What's New in Statistical Machine Translation,'' Conference on Uncertainty in AI (UAI), Acapulco, Mexico, 2003.
+\item ``Deeper Representations for Machine Translation: Ready or Not?,'' Conference on Empirical Methods in Natural Language Processing (EMNLP), 2003.
+\item ``Every Time I Fire a Statistician, I Get a Warm Fuzzy Feeling,'' Conference of the Association for Machine Translation in the Americas (AMTA), Cuernavaca, Mexico, 2000.
+\item ``Statistical Machine Translation: Where it Went,'' Conference on Empirical Methods in Natural Language Processing (EMNLP), 1997.
 \end{itemize}
 
 %\vspace{0.25in}
@@ -224,12 +158,10 @@ Cambridge, USA, 2010.
 \begin{itemize}
 
 \item {\bf University of Southern California}.  {\em Natural Language
-Processing}, annually from 1993 to 1998.
-{\em Advanced Natural Language Processing}, annually from 2000.
+Processing}, 1993-1998.  {\em Advanced Natural Language Processing}, 2000-2017.
 
 \item {\bf Stanford University}.  {\em Statistical Machine Translation}, 
-short course,
-Linguistic Society of America Summer School (2007).
+short course, Linguistic Society of America Summer School (2007).
 
 \item {\bf University of California, Los Angeles}.  {\em Machine Translation}, 
 short course, UCLA Extension (1996, 1997).
@@ -460,6 +392,12 @@ of Artificial Intelligence), 2014-.
 
 \item Outstanding Paper Award,
 ``Recurrent Neural Networks as Weighted Language Recognizers'' (Y. Chen, S. Gilroy, A. Maletti, J. May, and K. Knight), Proceedings of the Conference of the North American Association for Computational Linguistics (NAACL), 2018. 
+
+\item Best Demo Award,
+``Out-of-the-Box Universal Romanization Tool <i>uroman</i>'' (U. Hermjakob,
+J. May, and K. Knight),
+Proceedings of the Conference of the 
+Association for Computational Linguistics (ACL), Demonstrations Track, 2018.
 
 \item Best Demo Award,
 ``Hafez: an Interactive Poetry Generation System'' (M. Ghazvininejad, X. Shi, 
