Home page files 1

--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -394,7 +394,7 @@ of Artificial Intelligence), 2014-.
 ``Recurrent Neural Networks as Weighted Language Recognizers'' (Y. Chen, S. Gilroy, A. Maletti, J. May, and K. Knight), Proceedings of the Conference of the North American Association for Computational Linguistics (NAACL), 2018. 
 
 \item Best Demo Award,
-``Out-of-the-Box Universal Romanization Tool <i>uroman</i>'' (U. Hermjakob,
+``Out-of-the-Box Universal Romanization Tool {\em uroman}'' (U. Hermjakob,
 J. May, and K. Knight),
 Proceedings of the Conference of the 
 Association for Computational Linguistics (ACL), Demonstrations Track, 2018.
