--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -22,17 +22,13 @@
 
 \bigskip
 
-Information Sciences Institute \\
+DiDi Labs \\
 \indent
-University of Southern California \\
-\indent
-4676 Admiralty Way \\
+4640 Admiralty Way, Suite 225 \\
 \indent
 Marina del Rey, CA 90292 \\
 \indent
-(310) 448-8716 \\
-\indent
-\verb+knight@isi.edu+ 
+\verb+kevin.crawford.knight@gmail.com+ 
 %\indent
 %\verb+www.isi.edu/~knight+
 
