--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -612,7 +612,9 @@ Surveys}, 21(1), March, 1989.
 {\bf Refereed Conference Papers}
 \begin{itemize}
 
-\item ``Modeling Naive Psychology of Characters in Simple Commonsense Stories.'' (H. Rashkin, A. Bosselut, M. Sap, K. Knight, and Y. Choi), Proc. ACL, 2018.
+\item ``Multi-lingual Common Semantic Space Construction via Cluster-consistent Word Embedding'' (L. Huang, K. Cho, B. Zhang, H. Ji and K. Knight), Proc. EMNLP, 2018. 
+
+\item ``Modeling Naive Psychology of Characters in Simple Commonsense Stories'' (H. Rashkin, A. Bosselut, M. Sap, K. Knight, and Y. Choi), Proc. ACL, 2018.
 
 \item ``Paper Abstract Writing through Rewriting Mechanism'' (Q. Wang, Z. Zhou, L. Huang, S. Whitehead, B. Zhang, H. Ji and K. Knight), Proc. ACL, 2018.
 
