--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -266,6 +266,9 @@ Machine Translation.'' 1996.  (with E. Hovy).  DoD-funded. % at \$300k.
 \hd{PhD Students}
 
 \begin{itemize}
+\item Dr. Nima Pourdamghani (2019),
+``Non-Traditional Resources and Improved Tools for Low-Resource
+Machine Translation.''
 \item Dr. Xing Shi, PhD thesis (2018),
 ``Neural Sequence Models: Interpretation and Augmentation.''
 \item Dr. Marjan Ghazvininejad, PhD thesis (2018),
