--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -304,6 +304,11 @@ Lexical Collocations and Syntactic Relations.''
 %\item {\bf Current Ph.D. students.} Jonathan May, Steven DeNeefe,
 %Sujith Ravi, Victoria Fossum.
 \item {\bf Served on PhD dissertation committee:}
+Sayan Ghosh (USC),
+Sahil Garg (USC),
+Yuanhang Su (USC),
+Xiaoman Pan (RPI),
+Zhengping Che (USC),
 Dogan Can (USC),
 Sayan Ghosh (USC),
 Kuan Liu (USC),
