--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -39,7 +39,7 @@ Marina del Rey, CA 90292 \\
 \begin{itemize}
 \item Chief Scientist for Natural Language Processing (2018-), Didi Chuxing.
 
-\item Dean's Professor of Computer Science (2014-), 
+\item Dean's Professor of Computer Science (2014-2020), 
 Research Professor (2011-2014), 
 Research Associate Professor (2002-2010),
 Research Assistant Professor (1993-2002), 
@@ -96,6 +96,9 @@ for Computational Linguistics (NAACL), 2016.
 
 \item {\bf Program chair.}  Conference of the North American Association
 for Computational Linguistics (NAACL), 2001.
+China Conference on Machine Translation (CCMT), 2019.
+Conference of the Asia-Pacific Chapter of the Association for
+Computational Linguistics (AACL), 2020.
 
 %\item {\bf Program committee.} Conference of the Association for 
 %Computational Linguistics (ACL), 
@@ -618,6 +621,16 @@ Surveys}, 21(1), March, 1989.
 \noindent
 {\bf Refereed Conference Papers}
 \begin{itemize}
+
+\item ``Decipherment of Historical Manuscript Images'' (X. Yin, N. Aldarrab, B. Megyesi and K. Knight), Proc. ICDAR, 2019. 
+
+\item ``Neighbors Helping the Poor: Improving Low-Resource Machine Translation Using Related Languages'' (N. Pourdamghani and K. Knight), Machine Translation, 2019. 
+
+\item ``Translating Translationese: A Two-Step Approach to Unsupervised Machine Translation'' (N. Pourdamghani, N. Aldarrab, M. Ghazvininejad, K. Knight and J. May), Proc. ACL, 2019. 
+
+\item ``PaperRobot: Incremental Draft Generation of Scientific Ideas'' (Q. Wang, L. Huang, Z. Jiang, K. Knight, H. Ji, M. Bansal and Y. Luan), Proc. ACL, 2019. 
+
+\item ``Plan-And-Write: Towards Better Automatic Storytelling'' (N. Peng, R. Weischedel, K. Knight, D. Zhao, and R. Yan), Proc. AAAI, 2019. 
 
 \item ``Multi-lingual Common Semantic Space Construction via Cluster-consistent Word Embedding'' (L. Huang, K. Cho, B. Zhang, H. Ji and K. Knight), Proc. EMNLP, 2018. 
 
