--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -442,6 +442,8 @@ Committee on Undergraduate Education, 1984.
 \hd{Patents Awarded}
 
 \begin{itemize}
+\item ``Systems and methods for using machine learning and rules-based algorithms to create a patent specification based on human-provided patent claims such that the patent specification is created without human intervention'' (I. Schick and K. Knight), US 10417341, issued September 17, 2019.
+
 \item ``System and Method for Capitalizing Machine Translated Text'' (W. Wang, K. Knight, and D. Marcu), 
 US 8886518, issued November 11, 2014.
 
