--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -542,6 +542,8 @@ McGraw-Hill Book Company, 1991.
 \noindent
 {\bf Journal Articles}
 \begin{itemize}
+\item ``Neighbors Helping the Poor: Improving Low-Resource Machine Translation Using Related Languages'' (N. Pourdamghani and K. Knight), {\em Machine Translation}, 2019. 
+
 \item ``Humans Outperform Machines at the Bilingual Shannon Game'' (M. Ghazvininejad and K. Knight), {\em Entropy} 19(1), 2017.
 
 \item ``Incident-Driven Machine Translation and Name Tagging for Low-resource Languages'' (U. Hermjakob, Q. Li, D. Marcu, J. May, S. J. Mielke, N. Pourdamghani, M. Pust, X. Shi, K. Knight, T. Levinboim, K. Murray, D. Chiang, B. Zhang, X. Pan, D. Lu, Y. Lin, and H. Ji), {\em Machine Translation}, 2017.
@@ -625,8 +627,6 @@ Surveys}, 21(1), March, 1989.
 \begin{itemize}
 
 \item ``Decipherment of Historical Manuscript Images'' (X. Yin, N. Aldarrab, B. Megyesi and K. Knight), Proc. ICDAR, 2019. 
-
-\item ``Neighbors Helping the Poor: Improving Low-Resource Machine Translation Using Related Languages'' (N. Pourdamghani and K. Knight), Machine Translation, 2019. 
 
 \item ``Translating Translationese: A Two-Step Approach to Unsupervised Machine Translation'' (N. Pourdamghani, N. Aldarrab, M. Ghazvininejad, K. Knight and J. May), Proc. ACL, 2019. 
 
