--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -625,9 +625,15 @@ Surveys}, 21(1), March, 1989.
 \noindent
 {\bf Refereed Conference Papers}
 \begin{itemize}
+\item ``Solving Historical Dictionary Codes with a Neural Language Model'' (C. Chu, R. Valenti, and K. Knight), Proc. EMNLP, 2020. 
+
+\item ``Learning to Pronounce Chinese Without a Pronunciation Dictionary'' (C. Chu, S. Fang, and K. Knight), Proc. EMNLP, 2020. 
+
+\item ``Findings of the IWSLT 2020 Evaluation Campaign'' (E. Ansari et al), Proc. IWSLT, 2020. 
+
+\item ``Parallel Corpus Filtering via Pre-trained Language Models'' (B. Zhang, A. Nagesh, K. Knight), Proc. ACL, 2020. 
 
 \item ``Decipherment of Historical Manuscript Images'' (X. Yin, N. Aldarrab, B. Megyesi and K. Knight), Proc. ICDAR, 2019. 
-
 \item ``Translating Translationese: A Two-Step Approach to Unsupervised Machine Translation'' (N. Pourdamghani, N. Aldarrab, M. Ghazvininejad, K. Knight and J. May), Proc. ACL, 2019. 
 
 \item ``PaperRobot: Incremental Draft Generation of Scientific Ideas'' (Q. Wang, L. Huang, Z. Jiang, K. Knight, H. Ji, M. Bansal and Y. Luan), Proc. ACL, 2019. 
@@ -1136,6 +1142,10 @@ Structure in Student Essays,'' (J. Burstein, D. Marcu, and K. Knight),
 {\bf Refereed Workshop Papers}
 
 \begin{itemize}
+\item ``A Hybrid Task-Oriented Dialog System with Domain and Task Adaptive Pretraining'' (B. Zhang, Y. Lyu, N. Ding, T. Shen, Z. Jia, K. Han, and K. Knight), Proc. DSTC9 Workshop (AAAI), 2021. 
+
+\item ``DiDi's Machine Translation System for WMT2020'' (T. Chen, W. Wang, W. Wei, X. Shi, X. Li, J. Ye, and K. Knight), Proc. WMT, 2020. 
+
 
 \item ``Biomedical Event Extraction using Abstract Meaning Representation'' (S. Rao, D. Marcu, K. Knight, and H. Daume), Proc. BioNLP Workshop, ACL, 2017. 
 
