--- a/vita/CV_Knight_CSC.tex
+++ b/vita/CV_Knight_CSC.tex
@@ -383,3 +383,14 @@ North American Association for Computational Linguistics (NAACL-HLT),
 
 \end{itemize}
 \end{document}
+"DiDi's Machine Translation System for WMT2020" (T. Chen, W. Wang, W. Wei, X. Shi, X. Li, J. Ye, and K. Knight), Proc. WMT, 2020. Get paper in PDF.
+
+"Solving Historical Dictionary Codes with a Neural Language Model" (C. Chu, R. Valenti, and K. Knight), Proc. EMNLP, 2020. Get paper in PDF.
+
+"Learning to Pronounce Chinese Without a Pronunciation Dictionary" (C. Chu, S. Fang, and K. Knight), Proc. EMNLP, 2020. Get paper in PDF.
+
+"Findings of the IWSLT 2020 Evaluation Campaign" (E. Ansari et al), Proc. IWSLT, 2020. Get paper in PDF.
+
+"A Hybrid Task-Oriented Dialog System with Domain and Task Adaptive Pretraining" (B. Zhang, Y. Lyu, N. Ding, T. Shen, Z. Jia, K. Han, and K. Knight), Proc. DSTC9 Workshop (AAAI), 2021. Get paper in PDF.
+
+"Parallel Corpus Filtering via Pre-trained Language Models" (B. Zhang, A. Nagesh, K. Knight), Proc. ACL, 2020. Get paper in PDF.
