--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -1108,7 +1108,7 @@ Summit III, 1991.
 \end{itemize}
 
 \noindent
-{\bf Edited Volumes}
+{\bf Articles in Edited Volumes}
 \begin{itemize}
 
 \item ``Applications of Weighted Automata in Natural Language
