--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -123,6 +123,7 @@ Johns Hopkins University, funded by NSF and DoD), Summer 1999.
 \hd{Invited talks} 
 
 \begin{itemize}
+\item ``Do Simpler Automata Learn Better?'' German National Meeting on Automata, 2021; ACL Workshop on Deep Learning and Formal Languages, 2019.
 \item ``Deciphering Historical Manuscripts,'' International Conference on the Frontiers of Handwriting Recognition (ICFHR), 2018.
 \item ``The Moment When the Future Fell Asleep,'' Conference of the North American Association for Computational Linguistics (NAACL), 2018.
 \item ``What Is Neural Machine Translation Learning?'' Conference on Technologies and Applications of Artificial Intelligence (TAAI), 2017.
@@ -442,6 +443,16 @@ Committee on Undergraduate Education, 1984.
 \hd{Patents Awarded}
 
 \begin{itemize}
+\item ``Methods and systems for processing customer inquiries'' (A. Axelrod and K. Knight), US 11151578, issued October 19, 2021.
+
+\item ``Systems and methods for providing adaptive surface texture in auto-drafted patent documents'' (I. Schick, K. Knight, J. Priyadarshi, X. Shi), US 11023662, issued June 1, 2021.
+
+\item ``Systems and methods for automatically creating a patent application based on a claim set such that the patent application follows a document plan inferred from an example document'' (J. Priyadarshi, I. Schick, X. Shi, K. Knight), US 10747953, issued August 18, 2020.
+
+\item ``Machine learning model for computer-generated patent applications to provide support for individual claim features in a specification'' (K. Knight, I. Schick, J. Priyadarshi), US 10713443, issued July 14, 2020.
+
+\item ``Systems and methods for facilitating editing of a confidential document by a non-privileged person by stripping away content and meaning from the document without human intervention such that only structural and/or grammatical information of the document are conveyed to the non-privileged person'' (I. Schick, K. Knight, J. Priyadarshi, X. Shi), US 10621371, issued April 14, 2020.
+
 \item ``Systems and methods for using machine learning and rules-based algorithms to create a patent specification based on human-provided patent claims such that the patent specification is created without human intervention'' (I. Schick and K. Knight), US 10417341, issued September 17, 2019.
 
 \item ``System and Method for Capitalizing Machine Translated Text'' (W. Wang, K. Knight, and D. Marcu), 
@@ -625,6 +636,10 @@ Surveys}, 21(1), March, 1989.
 \noindent
 {\bf Refereed Conference Papers}
 \begin{itemize}
+\item ``MeetDot: Videoconferencing with Live Translation Captions'' (A. Arkhangorodsky, C. Chu, S. Fang, Y. Huang, D. Jiang, A. Nagesh, B. Zhang, and K. Knight), Proc. EMNLP System Demonstrations, 2021.
+
+\item ``Findings of the 2021 Conerence on Machine Translation'' (F. Akhbardeh et al), Proc. Sixth Conference on Machine Translation (WMT21), 2021.
+
 \item ``Solving Historical Dictionary Codes with a Neural Language Model'' (C. Chu, R. Valenti, and K. Knight), Proc. EMNLP, 2020. 
 
 \item ``Learning to Pronounce Chinese Without a Pronunciation Dictionary'' (C. Chu, S. Fang, and K. Knight), Proc. EMNLP, 2020. 
@@ -1142,10 +1157,13 @@ Structure in Student Essays,'' (J. Burstein, D. Marcu, and K. Knight),
 {\bf Refereed Workshop Papers}
 
 \begin{itemize}
+\item ``Learning Mathematical Properties of Integers'' (M. Ryskina and K. Knight), Proc. EMNLP BlackboxNLP Workshop, 2021. 
+
+\item ``MUSE: Textual Attributes Guided Portrait Painting Generation'' (X. Hu, P. Yu, K. Knight, H. Ji, B. Li, and H. Shi), Proc. 3rd IEEE Workshop on Artificial Intelligence for Art Creation, 2021. 
+
 \item ``A Hybrid Task-Oriented Dialog System with Domain and Task Adaptive Pretraining'' (B. Zhang, Y. Lyu, N. Ding, T. Shen, Z. Jia, K. Han, and K. Knight), Proc. DSTC9 Workshop (AAAI), 2021. 
 
 \item ``DiDi's Machine Translation System for WMT2020'' (T. Chen, W. Wang, W. Wei, X. Shi, X. Li, J. Ye, and K. Knight), Proc. WMT, 2020. 
-
 
 \item ``Biomedical Event Extraction using Abstract Meaning Representation'' (S. Rao, D. Marcu, K. Knight, and H. Daume), Proc. BioNLP Workshop, ACL, 2017. 
 
