--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -146,7 +146,7 @@ Johns Hopkins University, funded by NSF and DoD), Summer 1999.
 \item ``Results on Decipherment Problems,'' ESSLLI, Heriot-Watt, Scotland, 2005.
 \item ``What's New in Statistical Machine Translation,'' International Joint Conference on AI (IJCAI), Edinburgh, Scotland, 2005.
 \item ``What's New in Statistical Machine Translation,'' Conference on Uncertainty in AI (UAI), Acapulco, Mexico, 2003.
-\item ``Deeper Representations for Machine Translation: Ready or Not?,'' Conference on Empirical Methods in Natural Language Processing (EMNLP), 2003.
+\item ``Deeper Representations for Machine Translation: Ready or Not?'' Conference on Empirical Methods in Natural Language Processing (EMNLP), 2003.
 \item ``Every Time I Fire a Statistician, I Get a Warm Fuzzy Feeling,'' Conference of the Association for Machine Translation in the Americas (AMTA), Cuernavaca, Mexico, 2000.
 \item ``Statistical Machine Translation: Where it Went,'' Conference on Empirical Methods in Natural Language Processing (EMNLP), 1997.
 \end{itemize}
