--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -443,6 +443,8 @@ Committee on Undergraduate Education, 1984.
 \hd{Patents Awarded}
 
 \begin{itemize}
+\item ``Systems and methods for facilitating editing of a confidential document by a non-privileged person by stripping away content and meaning from the document without human intervention such that only structural and/or grammatical information of the document are conveyed to the non-privileged person'' (I. Schick, K. Knight, J. Priyadarshi, X. Shi), US 11188664, issued November 30, 2021.
+
 \item ``Methods and systems for processing customer inquiries'' (A. Axelrod and K. Knight), US 11151578, issued October 19, 2021.
 
 \item ``Systems and methods for providing adaptive surface texture in auto-drafted patent documents'' (I. Schick, K. Knight, J. Priyadarshi, X. Shi), US 11023662, issued June 1, 2021.
@@ -452,6 +454,8 @@ Committee on Undergraduate Education, 1984.
 \item ``Machine learning model for computer-generated patent applications to provide support for individual claim features in a specification'' (K. Knight, I. Schick, J. Priyadarshi), US 10713443, issued July 14, 2020.
 
 \item ``Systems and methods for facilitating editing of a confidential document by a non-privileged person by stripping away content and meaning from the document without human intervention such that only structural and/or grammatical information of the document are conveyed to the non-privileged person'' (I. Schick, K. Knight, J. Priyadarshi, X. Shi), US 10621371, issued April 14, 2020.
+
+\item ``Systems and methods for using machine learning and rules-based algorithms to create a patent specification based on human-provided patent claims such that the patent specification is created without human intervention'' (I. Schick and K. Knight), US 10572600, issued February 25, 2020.
 
 \item ``Systems and methods for using machine learning and rules-based algorithms to create a patent specification based on human-provided patent claims such that the patent specification is created without human intervention'' (I. Schick and K. Knight), US 10417341, issued September 17, 2019.
 
