Modifying the site

--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -37,7 +37,7 @@ Marina del Rey, CA 90292 \\
 \hd{Current}
 
 \begin{itemize}
-\item Chief Scientist for Natural Language Processing (2018-), Didi Chuxing.
+\item Chief Scientist for Natural Language Processing (2018-2022), Didi Global.
 
 \item Dean's Professor of Computer Science (2014-2020), 
 Research Professor (2011-2014), 
@@ -46,7 +46,7 @@ Research Assistant Professor (1993-2002),
 Computer Science Department, 
 University of Southern California.  
 
-\item Chief Scientist (2017-), Specifio.
+\item Chief Scientist (2017-2022), Specifio.
 
 \item Chief Scientist (2001-2010), SDL Language Weaver.
 
