Modifying the site

--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -22,12 +22,13 @@
 
 \bigskip
 
-DiDi Labs \\
-\indent
-4640 Admiralty Way, Suite 225 \\
-\indent
-Marina del Rey, CA 90292 \\
-\indent
+
+% DiDi Labs \\
+%\indent
+%4640 Admiralty Way, Suite 225 \\
+%\indent
+%Marina del Rey, CA 90292 \\
+%\indent
 \verb+kevin.crawford.knight@gmail.com+ 
 %\indent
 %\verb+www.isi.edu/~knight+
