Modifying the site

--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -35,7 +35,7 @@
 
 %\vspace{0.25in}
 
-\hd{Current}
+\hd{Positions}
 
 \begin{itemize}
 \item Chief Scientist for Natural Language Processing (2018-2022), Didi Global.
@@ -61,7 +61,8 @@ USC/Information Sciences Institute.
 
 \begin{itemize}
 \item {\bf Carnegie Mellon University}.  PhD, Computer Science, 1992.
-Dissertation title: ``Integrating Knowledge Acquisition and Language Acquisition.''
+
+%Dissertation title: ``Integrating Knowledge Acquisition and Language Acquisition.''
 %Thesis committee: Masaru Tomita (chairman),
 %Jaime Carbonell, Sergei Nirenburg, Elaine Rich.  
 
