Modifying the site

--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -38,7 +38,7 @@
 \hd{Positions}
 
 \begin{itemize}
-\item Chief Scientist for Natural Language Processing (2018-2022), Didi Global.
+\item Chief Scientist for Natural Language Processing (2018-), Didi Global.
 
 \item Dean's Professor of Computer Science (2014-2020), 
 Research Professor (2011-2014), 
