--- a/vita/CV_Knight.tex
+++ b/vita/CV_Knight.tex
@@ -38,19 +38,17 @@
 \hd{Positions}
 
 \begin{itemize}
-\item Chief Scientist for Natural Language Processing (2018-2022), Didi Global.
-
+\item Chief Scientist (2023-), Threeven Labs.
+\item Chief Scientist for Natural Language Processing 
+(2018-2022), Didi Global.
 \item Dean's Professor of Computer Science (2014-2020), 
 Research Professor (2011-2014), 
 Research Associate Professor (2002-2010),
 Research Assistant Professor (1993-2002), 
 Computer Science Department, 
 University of Southern California.  
-
 \item Chief Scientist (2017-2022), Specifio.
-
 \item Chief Scientist (2001-2010), SDL Language Weaver.
-
 \item Research Director and Fellow (1992-2018),
 USC/Information Sciences Institute.
 \end{itemize}
@@ -125,6 +123,8 @@ Johns Hopkins University, funded by NSF and DoD), Summer 1999.
 \hd{Invited talks} 
 
 \begin{itemize}
+\item ``30 Years of Perplexity,'' International Conference on Historical Cryptology (HistoCrypt), 2025.
+\item ``30 Years of Perplexity,'' 30th Japanese NLP Conference, 2024.
 \item ``Do Simpler Automata Learn Better?'' German National Meeting on Automata, 2021; ACL Workshop on Deep Learning and Formal Languages, 2019.
 \item ``Deciphering Historical Manuscripts,'' International Conference on the Frontiers of Handwriting Recognition (ICFHR), 2018.
 \item ``The Moment When the Future Fell Asleep,'' Conference of the North American Association for Computational Linguistics (NAACL), 2018.
